chapter_kubernetes/manifest/handson-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handson-init-container
spec:
  replicas: 1
  selector:
    matchLabels:
      id: handson-init-container
  template:
    metadata:
      labels:
        id: handson-init-container
    spec:
      volumes:
      - name: web-content
        emptyDir: {}
      containers:
      - image: nginx
        name: web-content
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
